# icu

./: MODULE.bazel  generate_bazel.py
bazel/: MODULE.bazel  overlay_repository.bzl
bazel/icu4c/source/common/: BUILD.bazel
bazel/icu4c/source/i18n/: BUILD.bazel
bazel/icu4c/source/io/: BUILD.bazel
bazel/icu4c/source/stubdata/: BUILD.bazel
bazel/icu4c/source/test/cintltst/: BUILD.bazel  runfiles_helper.cpp
bazel/icu4c/source/test/intltest/: BUILD.bazel
bazel/icu4c/source/tools/ctestfw/: BUILD.bazel
bazel/icu4c/source/tools/toolutil/: BUILD.bazel
bazel/patches/: intltest.patch
icu4c/: BUILD.bazel
icu4c/source/: BUILD.bazel
icu4c/source/common/: BUILD.bazel  putil.cpp
icu4c/source/data/: BUILD.bazel  generate_data.py
icu4c/source/i18n/: BUILD.bazel
icu4c/source/io/: BUILD.bazel
icu4c/source/python/: BUILD.bazel
icu4c/source/python/icutools/: BUILD.bazel
icu4c/source/python/icutools/databuilder/: BUILD.bazel  __bazel__.py  databuilder_entry.py
icu4c/source/python/icutools/databuilder/renderers/: BUILD.bazel
icu4c/source/python/icutools/databuilder/test/: BUILD.bazel  __bazel__.py  __main__.py
icu4c/source/stubdata/: BUILD.bazel
icu4c/source/test/cintltst/: BUILD.bazel  cintltst.c  runfiles_helper.cpp
icu4c/source/test/intltest/: BUILD.bazel  intltest.cpp  messageformat2test.h
icu4c/source/test/iotest/: BUILD.bazel
icu4c/source/test/testdata/: BUILD.bazel  databuilder.py  generate_testdata.py
icu4c/source/test/testmap/: BUILD.bazel
icu4c/source/test/thaitest/: BUILD.bazel
icu4c/source/tools/: BUILD.bazel
icu4c/source/tools/ctestfw/: BUILD.bazel
icu4c/source/tools/genbrk/: BUILD.bazel
icu4c/source/tools/genccode/: BUILD.bazel
icu4c/source/tools/gencfu/: BUILD.bazel
icu4c/source/tools/gencnval/: BUILD.bazel
icu4c/source/tools/gendict/: BUILD.bazel
icu4c/source/tools/gennorm2/: BUILD.bazel
icu4c/source/tools/genrb/: BUILD.bazel
icu4c/source/tools/gensprep/: BUILD.bazel
icu4c/source/tools/gentest/: BUILD.bazel
icu4c/source/tools/icupkg/: BUILD.bazel
icu4c/source/tools/makeconv/: BUILD.bazel
icu4c/source/tools/pkgdata/: BUILD.bazel
icu4c/source/tools/toolutil/: BUILD.bazel
testdata/message2/: BUILD.bazel
tools/unicode/c/genprops/: BUILD.bazel
tools/unicode/c/genuca/: BUILD.bazel
