bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "bazel_lib", version = "3.2.0")
bazel_dep(name = "rules_cc", version = "0.2.16")

# TODO(alloveras): Is this really a dev-dependency?
python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)

python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")
