bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_cc", version = "0.2.16")

# Python toolchain is required for ICU data generation.
# We register Python 3.12 but don't set it as default, allowing consumers
# to choose their own Python version. Any Python 3.9+ should work.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
