# load("@rules_cc//cc:defs.bzl", "cc_library")
# load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

# filegroup(
#     name = "srcs",
#     # The upstream Makefiles reference the LICENSE file at the top level
#     # directory. Hence, the file needs to be included into the filegroup
#     # as otherwise the build will fail to copy it into the output directory.
#     srcs = glob(["**"]) + ["//:LICENSE"],
# )

# configure_make(
#     name = "icu",
#     args = select({
#         # Execute as many 'make' jobs as logical CPUs. This speeds
#         # up the build significantly on multi-core machines.
#         "@platforms//os:macos": [
#             "-j",
#             '"$((n=$(/usr/sbin/sysctl -n hw.logicalcpu)/2, n < 1 ? 1 : n))"',
#         ],
#         "@platforms//os:linux": [
#             "-j",
#             '"$(nproc)"',
#         ],
#     }),
#     configure_command = "source/configure",
#     configure_in_place = True,
#     configure_options = [
#         "--enable-shared",
#         "--enable-static",
#         "--disable-icuio",
#         "--disable-samples",
#         "--disable-tests",
#     ],
#     configure_xcompile = True,
#     copts = ["-fPIC"],
#     # Always use 'ar' in all platforms. Otherwise, in MacOS, the build
#     # default to 'libtool' which causes invocations to fail due to
#     # CLI flags not being recognized.
#     env = {
#         "AR": "ar",
#     },
#     exec_properties = {
#         # Scheduling this package on a pool with more resources cuts
#         # its build time significantly:
#         #  - 'default' (1 CPUs, 3GB)  = 800-1000s
#         #  - 'be_int'  (8 CPUs, 16GB) = 130-150s
#         "Pool": "be_int",
#     },
#     lib_source = ":srcs",
#     out_data_dirs = [
#         "bin",
#     ],
#     out_shared_libs = select({
#         # The MacOS '.dylib' files are correctly produced but their presence means that some
#         # downstream builds will prefer them over the static library counterparts'.a'.
#         # This usually results on binaries that build successfully but crash at runtime because
#         # they can't load the '.dylib' files from within the Bazel runfiles. So, to avoid that,
#         # we simply pretend that there are no '.dylib' files.
#         "@platforms//os:macos": [],
#         "//conditions:default": [
#             "libicudata.so.76.1",
#             "libicudata.so.76",
#             "libicudata.so",
#             "libicuuc.so.76.1",
#             "libicuuc.so.76",
#             "libicuuc.so",
#             "libicui18n.so.76.1",
#             "libicui18n.so.76",
#             "libicui18n.so",
#             # libicutu (tools library) is needed for host tools like icupkg during cross-compilation
#             "libicutu.so.76.1",
#             "libicutu.so.76",
#             "libicutu.so",
#         ],
#     }),
#     out_static_libs = [
#         "libicudata.a",
#         "libicuuc.a",
#         "libicui18n.a",
#     ],
#     targets = [
#         "install",
#     ],
#     visibility = ["//:__pkg__"],
# )

# cc_library(
#     name = "hdrs",
#     hdrs = [
#         "common/bmpset.h",
#         "common/brkeng.h",
#         "common/bytesinkutil.h",
#         "common/capi_helper.h",
#         "common/charstr.h",
#         "common/charstrmap.h",
#         "common/cmemory.h",
#         "common/cpputils.h",
#         "common/cstr.h",
#         "common/cstring.h",
#         "common/cwchar.h",
#         "common/dictbe.h",
#         "common/dictionarydata.h",
#         "common/emojiprops.h",
#         "common/hash.h",
#         "common/icuplugimp.h",
#         "common/localefallback_data.h",
#         "common/localeprioritylist.h",
#         "common/localsvc.h",
#         "common/locbased.h",
#         "common/locdistance.h",
#         "common/loclikelysubtags.h",
#         "common/locmap.h",
#         "common/locutil.h",
#         "common/lsr.h",
#         "common/lstmbe.h",
#         "common/messageimpl.h",
#         "common/mlbe.h",
#         "common/msvcres.h",
#         "common/mutex.h",
#         "common/norm2_nfc_data.h",
#         "common/norm2allmodes.h",
#         "common/normalizer2impl.h",
#         "common/patternprops.h",
#         "common/pluralmap.h",
#         "common/propname.h",
#         "common/propname_data.h",
#         "common/propsvec.h",
#         "common/punycode.h",
#         "common/putilimp.h",
#         "common/rbbi_cache.h",
#         "common/rbbidata.h",
#         "common/rbbinode.h",
#         "common/rbbirb.h",
#         "common/rbbirpt.h",
#         "common/rbbiscan.h",
#         "common/rbbisetb.h",
#         "common/rbbitblb.h",
#         "common/resource.h",
#         "common/restrace.h",
#         "common/ruleiter.h",
#         "common/serv.h",
#         "common/servloc.h",
#         "common/servnotf.h",
#         "common/sharedobject.h",
#         "common/sprpimpl.h",
#         "common/static_unicode_sets.h",
#         "common/uarrsort.h",
#         "common/uassert.h",
#         "common/ubidi_props.h",
#         "common/ubidi_props_data.h",
#         "common/ubidiimp.h",
#         "common/ubrkimpl.h",
#         "common/ucase.h",
#         "common/ucase_props_data.h",
#         "common/ucasemap_imp.h",
#         "common/uchar_props_data.h",
#         "common/ucln.h",
#         "common/ucln_cmn.h",
#         "common/ucln_imp.h",
#         "common/ucmndata.h",
#         "common/ucnv_bld.h",
#         "common/ucnv_cnv.h",
#         "common/ucnv_ext.h",
#         "common/ucnv_imp.h",
#         "common/ucnv_io.h",
#         "common/ucnvmbcs.h",
#         "common/ucol_data.h",
#         "common/ucol_swp.h",
#         "common/ucptrie_impl.h",
#         "common/ucurrimp.h",
#         "common/udatamem.h",
#         "common/udataswp.h",
#         "common/uelement.h",
#         "common/uenumimp.h",
#         "common/uhash.h",
#         "common/uinvchar.h",
#         "common/ulayout_props.h",
#         "common/ulist.h",
#         "common/ulocimp.h",
#         "common/umapfile.h",
#         "common/umutex.h",
#         "common/unicode/appendable.h",
#         "common/unicode/brkiter.h",
#         "common/unicode/bytestream.h",
#         "common/unicode/bytestrie.h",
#         "common/unicode/bytestriebuilder.h",
#         "common/unicode/caniter.h",
#         "common/unicode/casemap.h",
#         "common/unicode/char16ptr.h",
#         "common/unicode/chariter.h",
#         "common/unicode/dbbi.h",
#         "common/unicode/docmain.h",
#         "common/unicode/dtintrv.h",
#         "common/unicode/edits.h",
#         "common/unicode/enumset.h",
#         "common/unicode/errorcode.h",
#         "common/unicode/filteredbrk.h",
#         "common/unicode/icudataver.h",
#         "common/unicode/icuplug.h",
#         "common/unicode/idna.h",
#         "common/unicode/localebuilder.h",
#         "common/unicode/localematcher.h",
#         "common/unicode/localpointer.h",
#         "common/unicode/locdspnm.h",
#         "common/unicode/locid.h",
#         "common/unicode/messagepattern.h",
#         "common/unicode/normalizer2.h",
#         "common/unicode/normlzr.h",
#         "common/unicode/parseerr.h",
#         "common/unicode/parsepos.h",
#         "common/unicode/platform.h",
#         "common/unicode/ptypes.h",
#         "common/unicode/putil.h",
#         "common/unicode/rbbi.h",
#         "common/unicode/rep.h",
#         "common/unicode/resbund.h",
#         "common/unicode/schriter.h",
#         "common/unicode/simpleformatter.h",
#         "common/unicode/std_string.h",
#         "common/unicode/strenum.h",
#         "common/unicode/stringoptions.h",
#         "common/unicode/stringpiece.h",
#         "common/unicode/stringtriebuilder.h",
#         "common/unicode/symtable.h",
#         "common/unicode/ubidi.h",
#         "common/unicode/ubiditransform.h",
#         "common/unicode/ubrk.h",
#         "common/unicode/ucasemap.h",
#         "common/unicode/ucat.h",
#         "common/unicode/uchar.h",
#         "common/unicode/ucharstrie.h",
#         "common/unicode/ucharstriebuilder.h",
#         "common/unicode/uchriter.h",
#         "common/unicode/uclean.h",
#         "common/unicode/ucnv.h",
#         "common/unicode/ucnv_cb.h",
#         "common/unicode/ucnv_err.h",
#         "common/unicode/ucnvsel.h",
#         "common/unicode/uconfig.h",
#         "common/unicode/ucpmap.h",
#         "common/unicode/ucptrie.h",
#         "common/unicode/ucurr.h",
#         "common/unicode/udata.h",
#         "common/unicode/udisplaycontext.h",
#         "common/unicode/uenum.h",
#         "common/unicode/uidna.h",
#         "common/unicode/uiter.h",
#         "common/unicode/uldnames.h",
#         "common/unicode/uloc.h",
#         "common/unicode/ulocale.h",
#         "common/unicode/ulocbuilder.h",
#         "common/unicode/umachine.h",
#         "common/unicode/umisc.h",
#         "common/unicode/umutablecptrie.h",
#         "common/unicode/unifilt.h",
#         "common/unicode/unifunct.h",
#         "common/unicode/unimatch.h",
#         "common/unicode/uniset.h",
#         "common/unicode/unistr.h",
#         "common/unicode/unorm.h",
#         "common/unicode/unorm2.h",
#         "common/unicode/uobject.h",
#         "common/unicode/urename.h",
#         "common/unicode/urep.h",
#         "common/unicode/ures.h",
#         "common/unicode/uscript.h",
#         "common/unicode/uset.h",
#         "common/unicode/usetiter.h",
#         "common/unicode/ushape.h",
#         "common/unicode/usprep.h",
#         "common/unicode/ustring.h",
#         "common/unicode/ustringtrie.h",
#         "common/unicode/utext.h",
#         "common/unicode/utf.h",
#         "common/unicode/utf16.h",
#         "common/unicode/utf32.h",
#         "common/unicode/utf8.h",
#         "common/unicode/utf_old.h",
#         "common/unicode/utrace.h",
#         "common/unicode/utypes.h",
#         "common/unicode/uvernum.h",
#         "common/unicode/uversion.h",
#         "common/unifiedcache.h",
#         "common/uniquecharstr.h",
#         "common/unisetspan.h",
#         "common/unistrappender.h",
#         "common/unormimp.h",
#         "common/uposixdefs.h",
#         "common/uprops.h",
#         "common/uresdata.h",
#         "common/uresimp.h",
#         "common/ureslocs.h",
#         "common/usc_impl.h",
#         "common/uset_imp.h",
#         "common/ustr_cnv.h",
#         "common/ustr_imp.h",
#         "common/ustrenum.h",
#         "common/ustrfmt.h",
#         "common/util.h",
#         "common/utracimp.h",
#         "common/utrie.h",
#         "common/utrie2.h",
#         "common/utrie2_impl.h",
#         "common/utypeinfo.h",
#         "common/uvector.h",
#         "common/uvectr32.h",
#         "common/uvectr64.h",
#         "common/wintz.h",
#         "i18n/anytrans.h",
#         "i18n/astro.h",
#         "i18n/bocsu.h",
#         "i18n/brktrans.h",
#         "i18n/buddhcal.h",
#         "i18n/casetrn.h",
#         "i18n/cecal.h",
#         "i18n/chnsecal.h",
#         "i18n/collation.h",
#         "i18n/collationbuilder.h",
#         "i18n/collationcompare.h",
#         "i18n/collationdata.h",
#         "i18n/collationdatabuilder.h",
#         "i18n/collationdatareader.h",
#         "i18n/collationdatawriter.h",
#         "i18n/collationfastlatin.h",
#         "i18n/collationfastlatinbuilder.h",
#         "i18n/collationfcd.h",
#         "i18n/collationiterator.h",
#         "i18n/collationkeys.h",
#         "i18n/collationroot.h",
#         "i18n/collationrootelements.h",
#         "i18n/collationruleparser.h",
#         "i18n/collationsets.h",
#         "i18n/collationsettings.h",
#         "i18n/collationtailoring.h",
#         "i18n/collationweights.h",
#         "i18n/collunsafe.h",
#         "i18n/coptccal.h",
#         "i18n/cpdtrans.h",
#         "i18n/csdetect.h",
#         "i18n/csmatch.h",
#         "i18n/csr2022.h",
#         "i18n/csrecog.h",
#         "i18n/csrmbcs.h",
#         "i18n/csrsbcs.h",
#         "i18n/csrucode.h",
#         "i18n/csrutf8.h",
#         "i18n/currfmt.h",
#         "i18n/dangical.h",
#         "i18n/dayperiodrules.h",
#         "i18n/decContext.h",
#         "i18n/decNumber.h",
#         "i18n/decNumberLocal.h",
#         "i18n/double-conversion.h",
#         "i18n/double-conversion-bignum.h",
#         "i18n/double-conversion-bignum-dtoa.h",
#         "i18n/double-conversion-cached-powers.h",
#         "i18n/double-conversion-diy-fp.h",
#         "i18n/double-conversion-double-to-string.h",
#         "i18n/double-conversion-fast-dtoa.h",
#         "i18n/double-conversion-ieee.h",
#         "i18n/double-conversion-string-to-double.h",
#         "i18n/double-conversion-strtod.h",
#         "i18n/double-conversion-utils.h",
#         "i18n/dt_impl.h",
#         "i18n/dtitv_impl.h",
#         "i18n/dtptngen_impl.h",
#         "i18n/erarules.h",
#         "i18n/esctrn.h",
#         "i18n/ethpccal.h",
#         "i18n/fmtableimp.h",
#         "i18n/formatted_string_builder.h",
#         "i18n/formattedval_impl.h",
#         "i18n/fphdlimp.h",
#         "i18n/funcrepl.h",
#         "i18n/gregoimp.h",
#         "i18n/hebrwcal.h",
#         "i18n/indiancal.h",
#         "i18n/inputext.h",
#         "i18n/islamcal.h",
#         "i18n/iso8601cal.h",
#         "i18n/japancal.h",
#         "i18n/measunit_impl.h",
#         "i18n/msgfmt_impl.h",
#         "i18n/name2uni.h",
#         "i18n/nfrlist.h",
#         "i18n/nfrs.h",
#         "i18n/nfrule.h",
#         "i18n/nfsubs.h",
#         "i18n/nortrans.h",
#         "i18n/nultrans.h",
#         "i18n/number_affixutils.h",
#         "i18n/number_asformat.h",
#         "i18n/number_compact.h",
#         "i18n/number_currencysymbols.h",
#         "i18n/number_decimalquantity.h",
#         "i18n/number_decimfmtprops.h",
#         "i18n/number_decnum.h",
#         "i18n/number_formatimpl.h",
#         "i18n/number_longnames.h",
#         "i18n/number_mapper.h",
#         "i18n/number_microprops.h",
#         "i18n/number_modifiers.h",
#         "i18n/number_multiplier.h",
#         "i18n/number_patternmodifier.h",
#         "i18n/number_patternstring.h",
#         "i18n/number_roundingutils.h",
#         "i18n/number_scientific.h",
#         "i18n/number_skeletons.h",
#         "i18n/number_types.h",
#         "i18n/number_usageprefs.h",
#         "i18n/number_utils.h",
#         "i18n/number_utypes.h",
#         "i18n/numparse_affixes.h",
#         "i18n/numparse_compositions.h",
#         "i18n/numparse_currency.h",
#         "i18n/numparse_decimal.h",
#         "i18n/numparse_impl.h",
#         "i18n/numparse_scientific.h",
#         "i18n/numparse_symbols.h",
#         "i18n/numparse_types.h",
#         "i18n/numparse_utils.h",
#         "i18n/numparse_validators.h",
#         "i18n/numrange_impl.h",
#         "i18n/numsys_impl.h",
#         "i18n/olsontz.h",
#         "i18n/persncal.h",
#         "i18n/pluralranges.h",
#         "i18n/plurrule_impl.h",
#         "i18n/quant.h",
#         "i18n/quantityformatter.h",
#         "i18n/rbt.h",
#         "i18n/rbt_data.h",
#         "i18n/rbt_pars.h",
#         "i18n/rbt_rule.h",
#         "i18n/rbt_set.h",
#         "i18n/regexcmp.h",
#         "i18n/regexcst.h",
#         "i18n/regeximp.h",
#         "i18n/regexst.h",
#         "i18n/regextxt.h",
#         "i18n/region_impl.h",
#         "i18n/reldtfmt.h",
#         "i18n/remtrans.h",
#         "i18n/scriptset.h",
#         "i18n/selfmtimpl.h",
#         "i18n/sharedbreakiterator.h",
#         "i18n/sharedcalendar.h",
#         "i18n/shareddateformatsymbols.h",
#         "i18n/sharednumberformat.h",
#         "i18n/sharedpluralrules.h",
#         "i18n/smpdtfst.h",
#         "i18n/standardplural.h",
#         "i18n/string_segment.h",
#         "i18n/strmatch.h",
#         "i18n/strrepl.h",
#         "i18n/taiwncal.h",
#         "i18n/titletrn.h",
#         "i18n/tolowtrn.h",
#         "i18n/toupptrn.h",
#         "i18n/transreg.h",
#         "i18n/tridpars.h",
#         "i18n/tzgnames.h",
#         "i18n/tznames_impl.h",
#         "i18n/ucln_in.h",
#         "i18n/ucol_imp.h",
#         "i18n/uitercollationiterator.h",
#         "i18n/umsg_imp.h",
#         "i18n/unesctrn.h",
#         "i18n/uni2name.h",
#         "i18n/unicode/alphaindex.h",
#         "i18n/unicode/basictz.h",
#         "i18n/unicode/calendar.h",
#         "i18n/unicode/choicfmt.h",
#         "i18n/unicode/coleitr.h",
#         "i18n/unicode/coll.h",
#         "i18n/unicode/compactdecimalformat.h",
#         "i18n/unicode/curramt.h",
#         "i18n/unicode/currpinf.h",
#         "i18n/unicode/currunit.h",
#         "i18n/unicode/datefmt.h",
#         "i18n/unicode/dcfmtsym.h",
#         "i18n/unicode/decimfmt.h",
#         "i18n/unicode/displayoptions.h",
#         "i18n/unicode/dtfmtsym.h",
#         "i18n/unicode/dtitvfmt.h",
#         "i18n/unicode/dtitvinf.h",
#         "i18n/unicode/dtptngen.h",
#         "i18n/unicode/dtrule.h",
#         "i18n/unicode/fieldpos.h",
#         "i18n/unicode/fmtable.h",
#         "i18n/unicode/format.h",
#         "i18n/unicode/formattednumber.h",
#         "i18n/unicode/formattedvalue.h",
#         "i18n/unicode/fpositer.h",
#         "i18n/unicode/gender.h",
#         "i18n/unicode/gregocal.h",
#         "i18n/unicode/listformatter.h",
#         "i18n/unicode/measfmt.h",
#         "i18n/unicode/measunit.h",
#         "i18n/unicode/measure.h",
#         "i18n/unicode/msgfmt.h",
#         "i18n/unicode/nounit.h",
#         "i18n/unicode/numberformatter.h",
#         "i18n/unicode/numberrangeformatter.h",
#         "i18n/unicode/numfmt.h",
#         "i18n/unicode/numsys.h",
#         "i18n/unicode/plurfmt.h",
#         "i18n/unicode/plurrule.h",
#         "i18n/unicode/rbnf.h",
#         "i18n/unicode/rbtz.h",
#         "i18n/unicode/regex.h",
#         "i18n/unicode/region.h",
#         "i18n/unicode/reldatefmt.h",
#         "i18n/unicode/scientificnumberformatter.h",
#         "i18n/unicode/search.h",
#         "i18n/unicode/selfmt.h",
#         "i18n/unicode/simplenumberformatter.h",
#         "i18n/unicode/simpletz.h",
#         "i18n/unicode/smpdtfmt.h",
#         "i18n/unicode/sortkey.h",
#         "i18n/unicode/stsearch.h",
#         "i18n/unicode/tblcoll.h",
#         "i18n/unicode/timezone.h",
#         "i18n/unicode/tmunit.h",
#         "i18n/unicode/tmutamt.h",
#         "i18n/unicode/tmutfmt.h",
#         "i18n/unicode/translit.h",
#         "i18n/unicode/tzfmt.h",
#         "i18n/unicode/tznames.h",
#         "i18n/unicode/tzrule.h",
#         "i18n/unicode/tztrans.h",
#         "i18n/unicode/ucal.h",
#         "i18n/unicode/ucol.h",
#         "i18n/unicode/ucoleitr.h",
#         "i18n/unicode/ucsdet.h",
#         "i18n/unicode/udat.h",
#         "i18n/unicode/udateintervalformat.h",
#         "i18n/unicode/udatpg.h",
#         "i18n/unicode/udisplayoptions.h",
#         "i18n/unicode/ufieldpositer.h",
#         "i18n/unicode/uformattable.h",
#         "i18n/unicode/uformattednumber.h",
#         "i18n/unicode/uformattedvalue.h",
#         "i18n/unicode/ugender.h",
#         "i18n/unicode/ulistformatter.h",
#         "i18n/unicode/ulocdata.h",
#         "i18n/unicode/umsg.h",
#         "i18n/unicode/unirepl.h",
#         "i18n/unicode/unum.h",
#         "i18n/unicode/unumberformatter.h",
#         "i18n/unicode/unumberoptions.h",
#         "i18n/unicode/unumberrangeformatter.h",
#         "i18n/unicode/unumsys.h",
#         "i18n/unicode/upluralrules.h",
#         "i18n/unicode/uregex.h",
#         "i18n/unicode/uregion.h",
#         "i18n/unicode/ureldatefmt.h",
#         "i18n/unicode/usearch.h",
#         "i18n/unicode/usimplenumberformatter.h",
#         "i18n/unicode/uspoof.h",
#         "i18n/unicode/utmscale.h",
#         "i18n/unicode/utrans.h",
#         "i18n/unicode/vtzone.h",
#         "i18n/units_complexconverter.h",
#         "i18n/units_converter.h",
#         "i18n/units_data.h",
#         "i18n/units_router.h",
#         "i18n/uspoof_conf.h",
#         "i18n/uspoof_impl.h",
#         "i18n/usrchimp.h",
#         "i18n/utf16collationiterator.h",
#         "i18n/utf8collationiterator.h",
#         "i18n/vzone.h",
#         "i18n/windtfmt.h",
#         "i18n/winnmfmt.h",
#         "i18n/wintzimpl.h",
#         "i18n/zonemeta.h",
#         "i18n/zrule.h",
#         "i18n/ztrans.h",
#     ],
#     includes = [
#         "common",
#         "i18n",
#     ],
#     visibility = ["//:__subpackages__"],
# )
