load("@bazel_lib//lib:run_binary.bzl", "run_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//icu4c/source:__subpackages__"])

# ICU version information
ICU_VERSION = "79"

ICU_DATA_NAME = "icudt" + ICU_VERSION + "l"

exports_files(
    [
        "unidata/NormalizationCorrections.txt",
    ],
    visibility = ["//icu4c/source/test:__subpackages__"],
)

# Collect all source data files
filegroup(
    name = "brkitr_rules",
    srcs = glob(["brkitr/rules/*.txt"]),
)

filegroup(
    name = "brkitr_dictionaries",
    srcs = glob(["brkitr/dictionaries/*.txt"]),
)

filegroup(
    name = "brkitr_data",
    srcs = glob([
        "brkitr/*.txt",
        "brkitr/lstm/*.txt",
        "brkitr/adaboost/*.txt",
        "brkitr/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "locales_data",
    srcs = glob([
        "locales/*.txt",
        "locales/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "coll_data",
    srcs = glob([
        "coll/*.txt",
        "coll/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "curr_data",
    srcs = glob([
        "curr/*.txt",
        "curr/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "lang_data",
    srcs = glob([
        "lang/*.txt",
        "lang/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "region_data",
    srcs = glob([
        "region/*.txt",
        "region/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "zone_data",
    srcs = glob([
        "zone/*.txt",
        "zone/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "unit_data",
    srcs = glob([
        "unit/*.txt",
        "unit/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "rbnf_data",
    srcs = glob([
        "rbnf/*.txt",
        "rbnf/LOCALE_DEPS.json",
    ]),
)

filegroup(
    name = "translit_data",
    srcs = glob(["translit/*.txt"]),
)

filegroup(
    name = "misc_data",
    srcs = glob(["misc/*.txt"]),
)

filegroup(
    name = "mappings_data",
    srcs = glob([
        "mappings/*.txt",
        "mappings/*.ucm",
    ]),
)

filegroup(
    name = "sprep_data",
    srcs = glob(["sprep/*.txt"]),
)

filegroup(
    name = "unidata",
    srcs = glob(["unidata/*.txt"]),
)

filegroup(
    name = "in_data",
    srcs = glob([
        "in/*.icu",
        "in/*.nrm",
        "in/coll/*.icu",
    ]),
)

filegroup(
    name = "all_data_sources",
    srcs = [
        ":brkitr_data",
        ":brkitr_dictionaries",
        ":brkitr_rules",
        ":coll_data",
        ":curr_data",
        ":in_data",
        ":lang_data",
        ":locales_data",
        ":mappings_data",
        ":misc_data",
        ":rbnf_data",
        ":region_data",
        ":sprep_data",
        ":translit_data",
        ":unidata",
        ":unit_data",
        ":zone_data",
    ],
)

# Generate the ICU data package using the databuilder
# This genrule runs the Python databuilder to generate all intermediate files,
# then packages them into the final .dat file and converts to assembly.
genrule(
    name = "icudata_gen",
    srcs = [
        "BUILDRULES.py",
        ":brkitr_data",
        ":brkitr_dictionaries",
        ":brkitr_rules",
        ":coll_data",
        ":curr_data",
        ":in_data",
        ":lang_data",
        ":locales_data",
        ":mappings_data",
        ":misc_data",
        ":rbnf_data",
        ":region_data",
        ":sprep_data",
        ":translit_data",
        ":unidata",
        ":unit_data",
        ":zone_data",
    ],
    outs = [
        ICU_DATA_NAME + ".dat",
        ICU_DATA_NAME + "_dat.S",
    ],
    cmd = """
        set -e
        set -x

        # Find the data source directory from one of the source files
        FIRST_LOCALE=$$(echo "$(locations :locales_data)" | tr ' ' '\\n' | head -1)
        SRC_DIR=$$(dirname $$(dirname $$FIRST_LOCALE))

        # The tooldir is a directory containing all the tools
        TOOL_DIR=$(location //icu4c/source/tools:tooldir)

        # The databuilder binary
        DATABUILDER=$(location //icu4c/source/python/icutools/databuilder)

        OUT_DIR=$$(mktemp -d)
        TMP_DIR=$$(mktemp -d)
        DATA_OUT_DIR=$$OUT_DIR/icudt79l

        mkdir -p $$DATA_OUT_DIR
        mkdir -p $$TMP_DIR

        echo "SRC_DIR=$$SRC_DIR"
        echo "TOOL_DIR=$$TOOL_DIR"
        echo "OUT_DIR=$$OUT_DIR"
        echo "DATA_OUT_DIR=$$DATA_OUT_DIR"
        echo "TMP_DIR=$$TMP_DIR"
        echo "DATABUILDER=$$DATABUILDER"

        # Run the databuilder to generate intermediate files
        # Note: --out_dir points to icudt79l subdir so tools can find data via -i OUT_DIR
        $$DATABUILDER \\
            --mode unix-exec \\
            --src_dir $$SRC_DIR \\
            --out_dir $$DATA_OUT_DIR \\
            --tmp_dir $$TMP_DIR \\
            --tool_dir $$TOOL_DIR \\
            --include_uni_core_data \\
            --seqmode parallel \\
            --verbose

        # Create the package list file
        (cd $$DATA_OUT_DIR && find . -type f | sed 's|^\\./||') > $$TMP_DIR/icudata.lst

        echo "Files to package:"
        cat $$TMP_DIR/icudata.lst

        # Package the data into a .dat file
        $$TOOL_DIR/pkgdata -m common -p icudt79l -c \\
            -s $$OUT_DIR/icudt79l \\
            -d $$TMP_DIR \\
            $$TMP_DIR/icudata.lst

        # Convert the .dat file to assembly
        $$TOOL_DIR/genccode \\
            --assembly gcc \\
            --name icudt79 \\
            --entrypoint icudt79 \\
            --destdir $(@D) \\
            $$TMP_DIR/icudt79l.dat

        # Copy the .dat file to output
        cp $$TMP_DIR/icudt79l.dat $(@D)/

        # Cleanup
        rm -rf $$OUT_DIR $$TMP_DIR
    """,
    tools = [
        "//icu4c/source/python/icutools/databuilder",
        "//icu4c/source/tools:tooldir",
    ],
)

cc_library(
    name = "icudata",
    srcs = [ICU_DATA_NAME + "_dat.S"],
)

# Export the .dat file for tests and other uses
filegroup(
    name = "icudata_dat_file",
    srcs = [ICU_DATA_NAME + ".dat"],
    visibility = ["//icu4c/source:__subpackages__"],
)
