load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//icu4c/source:__subpackages__"])

cc_library(
    name = "icui18n",
    srcs = glob([
        "*.h",
        "*.cpp",
    ]),
    hdrs = glob(["unicode/*.h"]),
    includes = ["."],
    local_defines = ["U_I18N_IMPLEMENTATION"],
    deps = ["//icu4c/source/common:icuuc"],
)

cc_library(
    name = "icui18n_bootstrap",
    srcs = glob([
        "*.h",
        "*.cpp",
    ]),
    hdrs = glob(["unicode/*.h"]),
    includes = ["."],
    local_defines = ["U_I18N_IMPLEMENTATION"],
    deps = ["//icu4c/source/common:icuuc_bootstrap"],
)
